Erste HTML Page angelegt, user input mit javascript - alert auf den Bildschirm

--- a/Webproject/index.html
+++ b/Webproject/index.html
@@ -1,1 +1,24 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Shortly</title>
+    <script src="script.js"></script>
+</head>
+
+<body>
+
+    <h1>Link hier eingeben:</h1>
+    <form> 
+        <label for="URL">URL:</label><br>
+        <input type="text" id="URL" name="URL"><br>
+        <label for="ShortURL">Shortened URL:</label><br>
+        <input type="text" id="ShortURL" name="ShortURL"><br>
+        <button onclick= "getInput()">Link verkürzen</button>
+    </form>
+    
+
+
+</body>
+
+</html>
