javascript, index.html überarbeitet, datenbank file hinzugefügt, stunden aktualisiert

--- a/Webproject/index.html
+++ b/Webproject/index.html
@@ -8,15 +8,22 @@
 
 <body>
 
-    <h1>Link hier eingeben:</h1>
-    <form> 
+    <h1>Shortly</h1>
+    <h3>Best Link-Shortener EU-West</h2>
+    <form>
         <label for="URL">URL:</label><br>
         <input type="text" id="URL" name="URL"><br>
-        <label for="ShortURL">Shortened URL:</label><br>
-        <input type="text" id="ShortURL" name="ShortURL"><br>
-        <button onclick= "getInput()">Link verkürzen</button>
+        <p id="shorten" onclick="shorten()">Hier klicken um den Link zu verkürzen.</p>
+
+
     </form>
-    
+
+    <form>
+
+
+
+    </form>
+
 
 
 </body>
