--- a/Webproject/index.html
+++ b/Webproject/index.html
@@ -13,9 +13,8 @@
     <form>
         <label for="URL">URL:</label><br>
         <input type="text" id="URL" name="URL"><br>
-        <p id="shorten" onclick="shorten()">Hier klicken um den Link zu verkürzen.</p>
-
-
+        <p id="shorten" onclick=shorten() >Hier klicken um den Link zu verkürzen.</p><br>
+        <button id= "store"  onclick=storeInDatabase()>Speichern</button>
     </form>
 </body>
 
