browersify eingelesen und installiert

--- a/Webproject/index.html
+++ b/Webproject/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Shortly</title>
-    <script src="script.js"></script>
+    <script src="bundle.js"></script>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <form>
         <label for="URL">URL:</label><br>
         <input type="text" id="URL" name="URL"><br>
-        <p id="shorten" onclick=shorten() >Hier klicken um den Link zu verkürzen.</p><br>
+        <p id="shorten" onclick=shorten >Hier klicken um den Link zu verkürzen.</p><br>
     </form>
 </body>
 
