--- a/Webproject/index.html
+++ b/Webproject/index.html
@@ -10,10 +10,10 @@
 
     <h1>Shortly</h1>
     <h3>Best Link-Shortener EU-West</h2>
-    <form>
-        <label for="URL">URL:</label><br>
-        <input type="text" id="URL" name="URL"><br>
-        <p id="shorten" onclick=shorten >Hier klicken um den Link zu verkürzen.</p><br>
+    <form action="/" method = "post">
+        <input type ="text" name ="longURL" /><br/>
+        <input type ="text" name ="shortURL" /><br/>
+        <button>Verkürzen</button>
     </form>
 </body>
 
