--- a/Frontend/shortly/src/index.html
+++ b/Frontend/shortly/src/index.html
@@ -5,11 +5,27 @@
   <title>Shortly</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!--Compiled and minified JavaScript-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+   <!--Import Google Icon Font-->
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>welcome to shortly</h1>
-  <app-root></app-root>
+  <div class="container">
 
+  
+
+  </div>
+  <a>
+    <img src="assets/images/shortlyLogo.jpg" alt="shortlyLogo">
+  </a>
+  <app-root></app-root>
 </body>
 </html>
