--- a/Frontend/shortly/index.html
+++ b/Frontend/shortly/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <h1>welcome to shortly</h1>
+<body>  
+  <nav class="navbar fixed-top navbar-light" style="background-color: #116eb1;">
+    <h1>welcome to shortly</h1>
+  </nav> <h1>welcome to shortly</h1>
   <app-root></app-root>
-
 </body>
 </html>
