--- a/Frontend/shortly/src/index.html
+++ b/Frontend/shortly/src/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>Shortly</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -24,33 +23,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <header>
-  <div  class="navbar sticky-top navbar-dark Larger shadow" style="background-color: #56667A">
-    <img src="assets/images/shortlylogo2.png" alt="shortlyLogo">  
-    
-    </div>
+
 </header>
 <body>
-  <!--<div class="light-blue darken-4 row">  
-    <div class="col s6"><img src="assets/images/shortlyLogo.jpg" alt="shortlyLogo"></div>
+  <div  class="navbar sticky-top navbar-dark Larger shadow " style="background-color: #56667A">
+    <img src="assets/images/shortlylogo5.png" alt="shortlyLogo">  
     </div>
-  </div>
-<nav class="navbar fixed-top navbar-dark bg-primary">
-      <img src="assets/images/shortlyLogo.jpg" alt="shortlyLogo">
-    </nav>
-  <div class="container"> 
-    
-  <h1 style="color: #c9c9c900;">welcome to shortly</h1>-->
-   
+
+
  
-<div  class="navbar fixed-top navbar-dark Larger shadow" style="background-color: #56667A">
-  <img src="assets/images/shortlylogo2.png" alt="shortlyLogo">  
+  <app-root class="eightyPercent"></app-root>
   
-  </div> <br>
-
- 
-  <app-root></app-root>
-  <h1>welcome to shortly</h1><h1>welcome to shortly</h1><h1>welcome to shortly</h1><h1>welcome to shortly</h1><h1>welcome to shortly</h1><h1>welcome to shortly</h1><h1>welcome to shortly</h1>
-
   
 </body>
 </html>
